src/test/compile-fail/arc-cant-nest-rw-arc-3177.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

extern crate sync;
use sync::RWArc;

fn main() {
    let arc1  = RWArc::new(true);
    let _arc2 = RWArc::new(arc1); //~ ERROR instantiating a type parameter with an incompatible type
}
